adding repository, RSS

--- a/content/posts/1.md
+++ b/content/posts/1.md
@@ -4,8 +4,15 @@ date: 2024-06-22
 draft: false
 categories: "write-up"
 tags: ["boot2root", "vulnhub", "ctf"]
+cover:
+  image: "/1/cover.png"
+  # can also paste direct link from external site
+  # ex. https://i.ibb.co/K0HVPBd/paper-mod-profilemode.png
+  alt: "Coffee Addicts"
+  caption: "Coffee Addicts"
+  relative: false # To use relative path for cover image, used in hugo Page-bundles
 ---
-#### The challenge is based on : https://www.vulnhub.com/entry/coffee-addicts-1,699/
+#### The challenge is based on : https://www.vulnhub.com/entry/coffee-addicts-1,699/  
 another vulnhub boot2root machine, well let's get started! first of all let's use netdiscover to see where the machine is.  
 
 ```bash
