fix the date, turns out it has to be 2006, why? idk

--- a/content/posts/1.md
+++ b/content/posts/1.md
@@ -1,6 +1,6 @@
 ---
 title: "Coffee Addicts : Write Up"
-date: 2024-22-06
+date: "2024-06-22"
 draft: false
 categories: "write-up"
 tags: ["boot2root", "vulnhub", "ctf"]
