--- a/content/posts/3.md
+++ b/content/posts/3.md
@@ -14,6 +14,6 @@ cover:
 ---
 #### What i've been working on
 Hello there, i'm trying to setup my vercel to linked with my github pages, so stay tuned  
-anyway here's a meme.  
+anyway here's a meme, have a good one!  
 
 ![FED](/3/1.png)
